--- a/style.css
+++ b/style.css
@@ -36,8 +36,9 @@ main
     resize: none;
 }
 
-.left textarea:focus{outline: 0;}
-.left textarea::placeholder{color: #0A3871;font-size: 30px;}
+textarea:focus{outline: 0;}
+textarea::placeholder{color: #0A3871;font-size: 30px;}
+
 .left div{width: 100%;}
 .left div p{font-size: small;}
 .left div p img{width: 15px;}
@@ -94,6 +95,18 @@ main
 .right p
 {text-align: center; padding: 0 5px;}
 
+#textoEncriptado00
+{
+    width: 100%;
+    height:50%;
+    padding:0 8px;
+    background: none;
+    border: 0;
+    font-size: 25px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #E00;
+    resize: none;
+}
 
 .copyright
 {
