--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ main
 {
     width: 900px;
     height: 700px;
-    margin: 50px  auto 0;
+    padding-top: 50px;
+    margin:0 auto 0 auto;
 }
 
 .left
